--- a/src/page/SnekBoard.css
+++ b/src/page/SnekBoard.css
@@ -1,8 +1,18 @@
 .grid {
-    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+
 }
 
 .grid_cell {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
+
+    border: 1px solid grey;
+    margin: 1px;
+    border-radius: 5px;
 }
