start game boilerplate logic

--- a/src/page/SnekBoard.css
+++ b/src/page/SnekBoard.css
@@ -1,3 +1,9 @@
+.start {
+    height: 50px;
+    font-size: 20px;
+    background-color: goldenrod;
+}
+
 .grid {
     position: absolute;
     top: 50%;
