start game notification flow looking ok

--- a/src/page/SnekBoard.css
+++ b/src/page/SnekBoard.css
@@ -4,6 +4,13 @@
     background-color: goldenrod;
 }
 
+.notification {
+    height: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 10px;
+}
+
 .grid {
     position: absolute;
     top: 50%;
