--- a/src/SnekBoard/SnekBoard.css
+++ b/src/SnekBoard/SnekBoard.css
@@ -18,7 +18,12 @@
     transform: translate(-50%, -50%);
 
     display: flex;
+    flex-direction: column;
 
+}
+
+.grid_row {
+    display: flex;
 }
 
 .grid_cell {
