--- a/src/SnekBoard/SnekBoard.css
+++ b/src/SnekBoard/SnekBoard.css
@@ -19,7 +19,7 @@
 
     display: flex;
     flex-direction: column;
-
+    border: 1px solid grey;
 }
 
 .grid_row {
@@ -30,9 +30,7 @@
     width: 15px;
     height: 15px;
 
-    border: 1px solid grey;
-    margin: 1px;
-    border-radius: 5px;
+    margin: .5px;
 }
 
 .empty {
